--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <div class="titulo">PARROT CARD GAME</div>
-    <div class="container">
+    <ul class="container">
       
-    </div>
+    </ul>
 
     <script src="script.js"></script>
 
